--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/txt_prozent"
-            android:inputType="number"
+            android:inputType="number|numberSigned|numberDecimal"
             android:singleLine="true" />
 
         <EditText
@@ -50,6 +50,11 @@
             android:layout_height="wrap_content">
 
         </RadioGroup>
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_ok"
